--- a/css/web/header.css
+++ b/css/web/header.css
@@ -1,6 +1,9 @@
-body{font-family: 'Nanum Gothic', sans-serif;}
 .res{display: none;}
 .res.w{display: block;}
+
+body>div{
+    min-width:1440px;
+}
 header{
     position: fixed;left: 0;top: 0;
     z-index: 9999;
@@ -42,7 +45,8 @@ header>div>nav>ul>li{
 header>div>nav>ul>li>a{
     display: block;
     padding-bottom: 12px;
-    font-size: 16px;
+    font-size: 18px;
+    font-family: 'HangeulNuri-Bold', sans-serif;
     color: #fff;
 }
 header>div>nav>ul>li>ul{
