--- a/css/web/main.css
+++ b/css/web/main.css
@@ -1,38 +1,66 @@
-main{
+main {
     margin: 0 auto;
     overflow: hidden;
 }
-.secTitle{
+
+.secTitle {
     text-align: center;
     font-size: 36px;
     line-height: 54px;
     font-family: 'HangeulNuri-Bold', sans-serif;
 }
-.secTitleB{
+
+.secTitleB {
     color: #00aae7;
 }
+
 /* 메인 배너 */
-.section{
+.section {
     height: 1080px;
     margin: 0 auto;
     position: relative;
 }
-.section input[id*="slide"]{
+
+.section input[id*="slide"] {
     display: none;
 }
-.section .slidewrap{
-    
+.section .page-wrapper{
+    position: relative;
+    height: 1080px;
 }
+
+/* .slidewrap {
+    border:1px solid red;
+}
+
 .section .slidelist{
-    position:relative;
-    white-space: nowrap;
-    font-size: 0;
+     width:84%;
+    height:350px;
+    margin:0px auto;
+    border:1px dashed red;
 }
+.post {
+    width:300px;
+  height:350px;
+  display:inline-block;
+  background:gray;
+}
+
 .slidelist .slick-prev{
     position:absolute;
+    top:50%;
+    left:30px;
+    font-size:2em;
+    color:gray;
+    cursor: pointer;
 }
 .slidelist .slick-next{
     position:absolute;
+    top:50%;
+    right:30px;
+    font-size:2em;
+    color:gray;
+    cursor: pointer;
 }
 .slick-dots{
     position:absolute; bottom:0; z-index:9999; 
@@ -92,67 +120,238 @@ main{
 }
 .section[id="slide03"]:checked ~ .slidewrap .slidelist > li {
     transform: translateX(-200%);
+} */
+
+/*post slider*/
+.post-slider {
+    width: 100%;
+    margin: 0px auto;
+    position: relative;
+}
+
+.post-slider .silder-title {
+    text-align: center;
+    margin: 0px auto;
+}
+
+.post-slider .post-wrapper {
+    position: relative;
+    margin: 0px auto;
+    overflow: hidden;
+}
+
+.post-wrapper>img.slick-prev {
+    position: absolute;
+    top: 500px;
+    left: 30px;
+    width: 30px;
+    height: 30px;
+    z-index: 999;
+}
+
+.post-wrapper>img.slick-next {
+    position: absolute;
+    top: 500px;
+    right: 30px;
+    width: 30px;
+    height: 30px;
+    z-index: 998;
+}
+
+.post-slider .post-wrapper .post {
+    display: inline-block;
+    position: relative;
+    background: white;
+    border-radius: 5px;
+}
+
+.post-slider .post-wrapper .post .post-info {
+    font-size: 15px;
+    height: 30%;
+    padding-left: 10px;
+}
+
+.post-slider .post-wrapper .post .slider-image {
+    width: 100%;
+    height: 175px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+/* .post-slider .post-wrapper .post>a>div.textbox1{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    text-align: center;
+    color: white;
+    font-family: 'HangeulNuri-Bold', sans-serif;
+}
+.post-slider .post-wrapper .post>a>div.textbox1>h3{
+    font-size:54px;
+    line-height:81px;
+}
+.post-slider .post-wrapper .post>a>div.textbox1>p{
+    font-size: 36px;
+    line-height:54px;
+} */
+.post-slider .post-wrapper .post>a>img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.slick-dots {
+    position: absolute;
+    left: 878px;
+    bottom: 120px;
+    padding: 0;
+    text-align: center;
+}
+
+.slick-dots li {
+    display: inline-block;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+
+.slick-dots li.slick-active button {
+    background-color: white;
+}
+
+.slick-dots li button {
+    width: 60px;
+    height: 15px;
+    background-color: rgba(255, 255, 255, 0);
+    border: white solid 3px;
+    text-shadow: none;
+    color: transparent;
+    font: 0;
+}
+
+.slick-dots li :hover {
+    background-color: white;
 }
 
 /* 만들다 만나다 꿈꾸다 */
-.event{
+.event {
     height: 584px;
     margin: 0 auto;
     margin-top: 180px;
 }
-.event .inner{
+
+.event .inner {
     width: 1440px;
     height: 584px;
     margin: 0 auto;
 }
-.event .inner .contents{
+
+.event .inner .contents {
     width: 1440px;
     height: 450px;
     margin: 0 auto;
     margin-top: 80px;
     background-color: purple;
 }
+
 /* 유한킴벌리 소식 */
-.news{
+.news {
     height: 414px;
     margin: 0 auto;
     margin-top: 180px;
 }
-.news .inner{
-    width: 1440px;
-    height: 414px;
-    margin: 0 auto;
-}
-.news .inner .contents{
+
+.news .inner {
     width: 1440px;
     height: 280px;
-    margin: 0 auto;
-    margin-top: 80px;
-    background-color: purple;
+    margin: 80px auto;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row;
 }
+
+.news .inner>div[class^="news"] {
+    width: 345px;
+    height: 280px;
+    background-color: whitesmoke;
+    box-sizing: border-box;
+    border-top: rgba(15, 15, 15, 0.5) solid 4px;
+    position: relative;
+}
+
+/*소식 호버 이벤트*/
+.news .inner>div[class^="news"]:hover {
+    width: 345px;
+    height: 280px;
+    background-color: whitesmoke;
+    box-sizing: border-box;
+    border-top: #00aae7 solid 4px;
+    position: relative;
+    box-shadow: 0 2px 5px rgba(80, 80, 80, .5);
+    transition: all 0.5s ease;
+}
+
+.news .inner>div[class^="news"]>h2 {
+    margin: 30px 30px 0;
+}
+
+.news .inner>div[class^="news"]>h2>a {
+    font-family: 'HangeulNuri-Bold', sans-serif;
+    font-size: 18px;
+    line-height: 24px;
+    color: black;
+}
+
+.news .inner>div[class^="news"]>p {
+    margin: 0 30px;
+    font-family: 'Nanum Gothic', sans-serif;
+    font-size: 14px;
+    line-height: 16px;
+    color: rgba(15, 15, 15, 0.6);
+}
+
+.news .inner>div.news1>p {
+    margin-top: 48px;
+}
+
+.news .inner>div:not(.news1)>p {
+    margin-top: 22px;
+}
+
+.news .inner>div[class^="news"]>time {
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    font-family: 'Nanum Gothic', sans-serif;
+    font-size: 12px;
+    color: rgba(15, 15, 15, 0.3);
+}
+
 /* 서브배너 */
-.visionTxt{
+.visionTxt {
     margin: 190px auto;
     height: 500px;
     background: url(../../imgs/sub_banner1.png) no-repeat;
     box-sizing: border-box;
 }
-.visionTxt .viInner{
+
+.visionTxt .viInner {
     margin: 0 auto;
     height: 500px;
 }
-.visionTxt .viInner .textbox2{
+
+.visionTxt .viInner .textbox2 {
     padding: 178px 0;
     color: white;
     text-align: center;
 }
-.visionTxt .viInner .textbox2>h3{
+
+.visionTxt .viInner .textbox2>h3 {
     font-family: 'HangeulNuri-Bold', sans-serif;
     font-size: 60px;
     font-weight: bold;
     line-height: 90px;
 }
-.visionTxt .viInner .textbox2>p{
+
+.visionTxt .viInner .textbox2>p {
     font-family: 'HangeulNuri-Bold', sans-serif;
     font-size: 36px;
     font-weight: bold;
@@ -160,41 +359,100 @@ main{
 }
 
 /* 유한킴벌리 브랜드 */
-.product{
+.product {
     margin: 0 auto;
 }
-.product .inner{
+
+.product .inner {
     margin: 0 auto;
     width: 1440px;
 }
-.product .productBox{
+
+.product .productBox {
     margin-top: 80px;
     width: 1440px;
     height: 960px;
     display: flex;
-    flex-flow:row wrap;
+    flex-flow: row wrap;
     flex: 0 0 33.3%;
 }
-.product .productBox>li{
+
+.product .productBox>li {
     width: 480px;
-    height: 480px;   
-}
-.product .productBox>li>a{
-    overflow:hidden;
-    position: relative;
-    display:block;
     height: 480px;
-}
-.product .productBox>li>a>div[class^= "box"]{
-    width:100%;
-}
-.product .productBox>li>a>div[class^= "box"]>img{
-    width:100%;
 }
 
-.product .productBox>li>a>div[class^="caption"]{
-    position: absolute;
+.product .productBox>li>a {
+    position: relative;
+    display: block;
+}
+
+.product .productBox>li>a>div[class^="box"] {
+    width: 100%;
+}
+
+.product .productBox>li>a>div[class^="box"]>img {
+    width: 100%;
+}
+
+.product .productBox>a>div[class^="caption"]>p {
+    display: none;
+}
+
+/* 브랜드 호버 이벤트 */
+.product .productBox>li:hover {
     width: 480px;
     height: 480px;
+    box-sizing: border-box;
+}
+
+.product .productBox>li:hover>a {
+    position: relative;
+    display: block;
+    height: 480px;
+}
+
+.product .productBox>li:hover>a::after {}
+
+.product .productBox>li:hover>a>div[class^="box"] {
+    width: 480px;
+    height: 480px;
+    overflow: hidden;
+}
+
+.product .productBox>li:hover>a>div[class^="box"]>img {
+    transform: scale(1.1);
+    transition: all .5s ease-out;
+}
+
+.product .productBox>li:hover>a>div[class^="caption"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 480px;
+    height: 480px;
+    box-shadow: 10px 10px 10px rgba(80, 80, 80, .5);
+    transition: all .5s ease-out;
     background: rgba(15, 15, 15, 0.6);
-}    
+
+}
+
+.product .productBox>li:hover>a>div[class^="caption"]>p:first-of-type {
+    margin-top: 180px;
+    text-align: center;
+    font: 32px 'HangeulNuri-Bold', sans-serif;
+    color: white;
+}
+
+.product .productBox>li:hover>a>div[class^="caption"]>p:last-of-type {
+    margin: 30px 0 0 215px;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: white solid 2px;
+    text-align: center;
+    border-radius: 50%;
+    font: 32px 'HangeulNuri-Bold', sans-serif;
+    line-height: 52px;
+    color: white;
+}
