--- a/css/web/main.css
+++ b/css/web/main.css
@@ -29,99 +29,6 @@ main {
     height: 1080px;
 }
 
-/* .slidewrap {
-    border:1px solid red;
-}
-
-.section .slidelist{
-     width:84%;
-    height:350px;
-    margin:0px auto;
-    border:1px dashed red;
-}
-.post {
-    width:300px;
-  height:350px;
-  display:inline-block;
-  background:gray;
-}
-
-.slidelist .slick-prev{
-    position:absolute;
-    top:50%;
-    left:30px;
-    font-size:2em;
-    color:gray;
-    cursor: pointer;
-}
-.slidelist .slick-next{
-    position:absolute;
-    top:50%;
-    right:30px;
-    font-size:2em;
-    color:gray;
-    cursor: pointer;
-}
-.slick-dots{
-    position:absolute; bottom:0; z-index:9999; 
-    width:600px; height:50px; 
-    border:1px solid red; 
-}
-.slick-dots>li{
-    
-}
-.slick-dots>li.slick-active{
-
-}
-
-.section .slidelist  li{
-    display: inline-block;
-    vertical-align: middle;
-}
-.section .slidelist li a{
-    display: block;
-    display: inline-block;
-    position: relative;
-}
-.section .slidelist li a img{
-    width: 100%;
-}
-.section .slidelist li>a>div.textbox{
-    position:absolute;
-    width: 1020px;
-    height: 144px;
-    top: 50%;
-    left: 50%;
-}
-.section .slidelist li>a .textbox>h3{
-    position:absolute;
-    font-size:60px; 
-    line-height: 90px;
-    vertical-align: middle;
-    color:#fff;opacity:0;
-    transform:translateY(30px);
-    transition:all .5s;
-}
-.section .slidelist li>a .textbox>p{
-    position:absolute;
-    font-size:36px;
-    line-height: 54px;
-    color:#fff;opacity:0;
-    vertical-align: middle;
-    transform:translateY(30px);
-    transition:all .5s;
-}
-
-.section[id="slide01"]:checked ~ .slidewrap .slidelist > li {
-    transform: translateX(0%);
-}
-.section[id="slide02"]:checked ~ .slidewrap .slidelist > li {
-    transform: translateX(-100%);
-}
-.section[id="slide03"]:checked ~ .slidewrap .slidelist > li {
-    transform: translateX(-200%);
-} */
-
 /*post slider*/
 .post-slider {
     width: 100%;
@@ -201,7 +108,7 @@ main {
 }
 .slick-dots {
     position: absolute;
-    left: 878px;
+    left: 870px;
     bottom: 120px;
     padding: 0;
     text-align: center;
@@ -236,22 +143,139 @@ main {
     height: 584px;
     margin: 0 auto;
     margin-top: 180px;
+    position: relative;
+}
+.event .btnprev{
+    position: absolute;
+    left: 890px;
+    bottom: 30px;
+    z-index: 999;
+}
+.event .btnplay{
+    display: none;
+    position: absolute;
+    left: 950px;
+    bottom: 30px;
+}
+.event .btnplay.on{
+    display: inline-block;
+    position: absolute;
+    left: 950px;
+    bottom: 30px;
+}
+.event .btnpause{
+    display:inline-block;
+    position: absolute;
+    left: 950px;
+    bottom: 30px;
+}
+.event .btnpause.on{
+    display: none;
+    position: absolute;
+    left: 950px;
+    bottom: 30px;
+}
+.event .btnnext{
+    position: absolute;
+    left: 1010px;
+    bottom: 30px; 
+    z-index: 998;
+}
+.event .eventInner {
+    width: 100%;
+    height: 584px;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row;
+    white-space: nowrap;
 }
 
-.event .inner {
+.event .eventInner .contents {
     width: 1440px;
     height: 584px;
     margin: 0 auto;
+    
 }
-
-.event .inner .contents {
+.event .eventInner .contents .rec{
     width: 1440px;
     height: 450px;
     margin: 0 auto;
     margin-top: 80px;
-    background-color: purple;
 }
-
+.event .eventInner .contents .rec .txtbox{
+    float: left;
+    width: 560px;
+    height: 360px;
+    margin: 0 auto;
+    box-shadow: 10px 10px 0px rgba(80, 80, 80, .5);
+    background-color: whitesmoke;
+    border:rgba(80, 80, 80, .5) solid 1px;
+    position: relative;
+}
+.event .eventInner .contents .rec .txtbox>h4{
+    margin: 50px 50px 20px 50px;
+    font-size: 26px;
+    line-height: 32px;
+    font-family: 'Nanum Gothic', sans-serif;
+}
+.event .eventInner .contents .rec .txtbox>p:nth-of-type(1){
+    margin: 0 50px 20px 50px;
+    font-size:14px;
+    font-family: 'Nanum Gothic', sans-serif;
+}
+.event .eventInner .contents .rec .txtbox>p:nth-of-type(2){
+    margin: 0 50px 35px 50px;
+    font-size: 14px;
+    line-height: 28px; 
+    font-family: 'Nanum Gothic', sans-serif;
+    color: rgba(80, 80, 80, .7);
+}
+.event .eventInner .contents .rec .txtbox>p:nth-of-type(3){
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
+}
+.event .eventInner .contents .rec .txtbox>p:nth-of-type(3)>a{
+    color: rgba(80, 80, 80, .7);
+}
+.event .eventInner .contents .rec .txtbox>span:nth-of-type(1){
+    margin-left: 50px;
+    font-size: 24px;
+    color: #00aae7;
+}
+.event .eventInner .contents .rec .txtbox>span:nth-of-type(3){
+    margin-left: 30px;
+    font-size: 24px;
+    color: #00aae7;
+}
+.event .eventInner .contents .rec .txtbox>span:nth-of-type(2n){
+    font-size: 18px;
+    color: #00aae7;
+}
+.event .eventInner .contents .img1{
+    float: right;
+    margin-top: 40px;
+    width: 830px;
+    height: 280px;
+    background:url(../../imgs/diagram_plant_cycle.png);
+    background-size: cover;
+}
+.event .eventInner .contents .img2{
+    float: right;
+    margin-top: 40px;
+    width: 830px;
+    height: 280px;
+    background:url(../../imgs/couple.png);
+    background-size: cover;
+}
+.event .eventInner .contents .img3{
+    float: right;
+    margin-top: 40px;
+    width: 830px;
+    height: 280px;
+    background:url(../../imgs/greencamp.png);
+    background-size: cover;
+}
 /* 유한킴벌리 소식 */
 .news {
     height: 414px;
@@ -413,7 +437,7 @@ main {
 }
 
 .product .productBox>li:hover>a::after {
-    
+
 }
 
 .product .productBox>li:hover>a>div[class^="box"] {
