--- a/css/web/main.css
+++ b/css/web/main.css
@@ -126,9 +126,10 @@ main {
 
 .slick-dots li button {
     width: 60px;
-    height: 15px;
+    height: 12px;
     background-color: rgba(255, 255, 255, 0);
-    border: white solid 3px;
+    border: white solid 2px;
+    border-radius: 6px;
     text-shadow: none;
     color: transparent;
     font: 0;
