--- a/css/web/header.css
+++ b/css/web/header.css
@@ -1,19 +1,23 @@
 .res{display: none;}
 .res.w{display: block;}
 
-body>div{
+/* body>div{
     min-width:1440px;
-}
+} */
 header{
-    position: fixed;left: 0;top: 0;
+    position: fixed;top: 0;/* 반응형으로 할때 left:0;추가하기 */
     z-index: 990;
-    width:100%; height: 80px;
-    background-color:rgba(0,0,0,.1);
-    box-shadow: 0 2px 5px rgba(80,80,80,.5);
+    margin: 0 auto;
+    width:1920px;
+    /* 반응형으로 할때 마진 없애고 위스100%로 바꾸기 */
+    height: 80px;
+    /* background-color:rgba(0,0,0,.1);
+    box-shadow: 2px 2px 3px rgba(80, 80, 80, .7); */
 }
 .center{
     position: relative;
-    min-width: 1440px;
+    /* min-width: 1440px; <- 반응형으로 할때 */
+    width: 1920px;
     margin: 0 auto; 
     height: 80px;
     overflow: hidden;  
@@ -22,8 +26,9 @@ header{
 /* margin-top 강사님이라 차이있음(21px) */
 
 /* 네비게이터 투명*/
-header>div.center>h1{
-    
+header>div.center{
+    margin: 0 auto;
+    background-color:rgba(0,0,0,.1);
 }
 header>div.center>a{
     z-index: 999;
@@ -32,7 +37,6 @@ header>div.center>a{
     width: 150px;
     height: 32px;
     background: url(../../imgs/h1_logo.png) no-repeat;
-
 }   
 header>div.center>nav{
     position: absolute;
@@ -123,9 +127,10 @@ header>div.center>div.head_util>div#lang>dl>dd.on>a{
 
 /* 스크롤 하면 생기는 헤더 */
 header.roll{
-    position: fixed;left: 0;top: 0;
+    position: fixed;top: 0;/* 반응형으로 할때 left:0;추가하기 */
     z-index: 990;
-    width:100%; height: 80px;
+    width: 1920px;/* 반응형으로 할때위스100%변경 */
+    height: 80px;
 }
 header.roll>div.center>a{
     position: absolute;
